@@ -9,6 +9,11 @@ $value= $this->parseInput($value, "||", "array");
 for ($i = 0; $i < count($value); $i++) {
     list($name,$url) = is_array($value[$i]) ? $value[$i]: explode("==",$value[$i]);
     if (!$url) $url = $name;
+
+    /* handle types that return IDs of resources */
+    $rid =intval($url);
+    if (!empty($rid)) { $url = '[[~'.$rid.']]'; }
+
     if ($url) {
         if($o) $o.='<br />';
         $attributes = '';
