@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODx. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#2794] Allow TV URL output render to handle values that are straight Resource IDs
 - [#2741] Fix bug where Resource Group associations were not copied when duplicating a Resource
 - [#2746] Fix bug where email was sent in registration email rather than username
 - [#2733] Fix bug where Template Var associations were not copied when duplicating a Template
